fix form half size not change to full size when view on mobile

--- a/frontend/src/components/pages/pageComponents/form.css
+++ b/frontend/src/components/pages/pageComponents/form.css
@@ -4,6 +4,11 @@
     justify-content: center;
 }
 
+@media screen and (max-width: 768px){
+    .form-body .half-form{
+        width: 100%;
+    }
+}
 
 .half-form{
     width: 48%;
